--- a/agree/res/layout/activity_team_setting.xml
+++ b/agree/res/layout/activity_team_setting.xml
@@ -6,7 +6,7 @@
     tools:context=".TeamSettingActivity" >
 
     <RelativeLayout
-        android:id="@+id/relativeLayout1"
+        android:id="@+id/teamsetting_title_layout"
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
@@ -59,135 +59,30 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relativeLayout2"
+        android:id="@+id/TeamSetting_gridview"
         android:layout_width="match_parent"
-        android:layout_height="130.0dp"
-        android:layout_below="@+id/relativeLayout1"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/teamsetting_title_layout"
         android:layout_centerHorizontal="true" >
 
-        <ImageView
-            android:id="@+id/TeamSetting_head"
-            android:layout_width="80.0dp"
-            android:layout_height="80.0dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5.0dp"
-            android:src="@drawable/login_1" />
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/teamsetting_swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/TeamSetting_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/TeamSetting_head"
-            android:layout_alignRight="@+id/TeamSetting_head"
-            android:layout_below="@+id/TeamSetting_head"
-            android:layout_marginTop="10.0dp"
-            android:gravity="center"
-            android:text="TextView"
-            android:textSize="15.0sp" />
+            <com.BJ.utils.GridViewWithHeaderAndFooter
+                android:id="@+id/teamsetting_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:columnWidth="90dp"
+                android:gravity="center"
+                android:horizontalSpacing="10dp"
+                android:numColumns="4"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp" >
+            </com.BJ.utils.GridViewWithHeaderAndFooter>
+        </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/TeamSetting_requestcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayout2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20.0dp"
-        android:text="生成小组邀请码"
-        android:textSize="20.0sp"
-         />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/TeamSetting_requestcode"
-        android:layout_centerHorizontal="true"
-        android:text="点击以生成小组邀请码并复制，将它发送给其他好友，让他们加入你的小组"
-        android:textSize="8.50sp"
-        android:textColor="#000000"
-         />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="35dp"
-        android:text="聚会信息提醒"
-        android:textSize="18.0sp"
-        android:textColor="#00e3e3"
-         />
-
-    <TextView
-        android:id="@+id/TeamSetting_message"
-        android:layout_width="70.0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/text"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_marginRight="42dp"
-        android:gravity="center"
-        android:textSize="15.0sp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/text"
-        android:layout_below="@+id/text"
-        android:layout_marginTop="35dp"
-        android:text="聊天信息提醒" 
-        android:textSize="18.0sp"
-        android:textColor="#00e3e3"
-        />
-
-    <TextView
-        android:id="@+id/TeamSetting_chat"
-        android:layout_width="70.0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/TeamSetting_message"
-        android:layout_alignTop="@+id/textView3"
-        android:gravity="center"
-        android:textSize="15.0sp"
-        
-        
-        />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="35dp"
-        android:text="公开手机号码"
-        android:textSize="18.0sp"
-        android:textColor="#00e3e3"
-         />
-
-    <TextView
-        android:id="@+id/TeamSetting_phone"
-        android:layout_width="70.0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/TeamSetting_chat"
-        android:layout_alignTop="@+id/textView5"
-        android:textSize="15.0sp"
-        android:gravity="center"
-         />
-
-    <TextView
-        android:id="@+id/TeamSetting_exit"
-        android:layout_width="100.0sp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:text="退出小组"
-        android:textColor="#ff0000"
-        android:textSize="18.0sp" />
 
 </RelativeLayout>
